# REVO

./: CMakeLists.txt  README.md  main.cpp
cmake/: external_FFMPEG.cmake
config/: dataset_tum1.yaml  license_header.txt  orbbec.yaml  orbbec_dataset.yaml  orbbec_normal.yaml  orbbec_pro.yaml  realsense.yaml  revo_settings.yaml
datastructures/: camerapyr.h  imgpyramidrgbd.cpp  imgpyramidrgbd.h
gui/: MapDrawer.cc  MapDrawer.h  PointCloudBuffered.h  Viewer.cc  Viewer.h
io/: iowrapperRGBD.cpp  iowrapperRGBD.h  realsensesensor.cpp  realsensesensor.h
orbbec_astra_pro/: 10-orbbecastra-usb.rules  OrbbecAstraEngineFFMPEG.cpp  OrbbecAstraEngineFFMPEG.h  OrbbecAstraEngineUVC.cpp  OrbbecAstraEngineUVC.h  OrbbecAstraOpenNIEngine.cpp  OrbbecAstraOpenNIEngine.h
system/: optimizer.cpp  optimizer.h  system.cpp  system.h  tracker.cpp  tracker.h
utils/: LGSX.h  Logging.cpp  Logging.h  timer.h
